force-app/main/default/objects/User/fields/AMCNotNAM__c.field-meta.xml
<CustomField>
    <fullName>AMCNotNAM__c</fullName>
    <formula>if(Profile.Name = &apos;AMC / Fleet Maintenance&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMC Not NAM</label>
    <type>Checkbox</type>
</CustomField>