force-app/main/default/objects/User/fields/NAMUser__c.field-meta.xml
<CustomField>
    <fullName>NAMUser__c</fullName>
    <formula>IF( OR(Profile.Name = &apos;AMC&apos;, Profile.Name = &apos;SPC Partner&apos;, Profile.Name = &apos;SPC Partner Admin&apos;, Profile.Name = &apos;SPC&apos;, Profile.Name = &apos;Technical SPC&apos;, Profile.Name = &apos;AMC Manager&apos;, Profile.Name =	&apos;AMC / Fleet Maintenance&apos; ), true, false)</formula>
    <label>NAM User?</label>
    <type>Checkbox</type>
</CustomField>