force-app/main/default/objects/User/fields/TW1_CFTCREA__c.field-meta.xml
<CustomField>
    <fullName>TW1_CFTCREA__c</fullName>
    <label>CFT/CREA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>