force-app/main/default/objects/User/fields/TW5_Inspector_Identification__c.field-meta.xml
<CustomField>
    <fullName>TW5_Inspector_Identification__c</fullName>
    <label>Inspector Identification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onshore Fabrication Inspector</fullName>
            </value>
            <value>
                <fullName>Quality Control Inspector - Receipt</fullName>
            </value>
            <value>
                <fullName>Offshore Fabrication Inspector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>