force-app/main/default/objects/User/fields/TW5_Supervisor_CREA__c.field-meta.xml
<CustomField>
    <fullName>TW5_Supervisor_CREA__c</fullName>
    <label>Supervisor CREA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>