force-app/main/default/objects/User/fields/TW5_Supervisor_Identification__c.field-meta.xml
<CustomField>
    <fullName>TW5_Supervisor_Identification__c</fullName>
    <label>Supervisor Identification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QA/QC Coordinator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>