force-app/main/default/objects/User/fields/TW5_Supervisor_Name__c.field-meta.xml
<CustomField>
    <fullName>TW5_Supervisor_Name__c</fullName>
    <label>Supervisor Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Denis Maia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>