force-app/main/default/objects/User/fields/UserLicense__c.field-meta.xml
<CustomField>
    <fullName>UserLicense__c</fullName>
    <formula>Profile.UserLicense.Name</formula>
    <label>User License</label>
    <type>Text</type>
</CustomField>